--- a/src/App.css
+++ b/src/App.css
@@ -29,19 +29,20 @@ a {
   display: flex;
   background-color: #FFFFFF;
 }
-.login-page div:nth-child(1) {
+.login-page>div:nth-child(1) {
   width: 100%;
-  max-width: 640px;
+  max-width: 722px;
   background: linear-gradient(180deg, #FEB9D6 0%, #FEDCEA 100%);
   height: 100%;
   box-shadow: 0px 10px 50px #F0D2DF;
   border-radius: 50px;
   transform: matrix(1, 0, 0, -1, 0, 0);
   position: relative;
+  transform: skew(5deg, 0deg);
+  left: -82px;
 }
 
 .login-page div:nth-child(1) img {
-  transform: rotate(180deg);
   position: absolute;
   top: 243px;
   left: 145px;
@@ -74,15 +75,15 @@ a {
   font-weight: 500;
   font-size: 17px;
   line-height: 25px;
+  color: #8D869E;
 }
 
 .login-page div:nth-child(2) a {
   padding: 0;
+  color: #F5781E;
 }
 
 .registration-form {
-  width: 100%;
-  max-width: 514px;
   margin: auto;
   background-color: #FFFFFF;
   border-radius: 24px;
@@ -90,11 +91,47 @@ a {
 .registration-form form {
   position: relative;
   padding: 60px 0;
+  border-radius: 24px;
+  max-width: 500px;
+  margin: auto;
+  z-index: 10;
+}
+
+.registration-form>div {
+  position: relative;
+}
+.registration-form div::before {
+  position: absolute;
+  z-index: 4;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 54%;
+  background: #fff;
+  box-shadow: -14px 1px 13px 8px rgb(182 198 214 / 20%);
+  border-radius: 24px 0 0 24px;
+  content: "";
+  -webkit-transform: skewX(3deg);
+  transform: skewX(3deg);
+}
+
+.registration-form div::after {
+  position: absolute;
+    z-index: 4;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 54%;
+    background: #fff;
+    box-shadow: 16px 1px 13px 8px rgb(182 198 214 / 20%);
+    border-radius: 0 24px 24px 0;
+    content: "";
+    -webkit-transform: skewX(-3deg);
+    transform: skewX(-3deg);
 }
 .registration-form form span {
   position: absolute;
   font-size: 10px;
-  font-weight: medium;
   color: #10C9BE;
   text-align: left;
   vertical-align: top;
