--- a/src/App.css
+++ b/src/App.css
@@ -23,34 +23,53 @@ a {
   margin: auto;
 }
 .login-page {
-  position: relative;
-  border-radius: 50px;
-  height: 900px;
   display: flex;
-  background-color: #FFFFFF;
+  align-items: flex-start;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
 }
 .login-page>div:nth-child(1) {
   width: 100%;
-  max-width: 722px;
-  background: linear-gradient(180deg, #FEB9D6 0%, #FEDCEA 100%);
-  height: 100%;
+  max-width: 640px;
+  background: linear-gradient(180deg,#fedcea,#feb9d6);
   box-shadow: 0px 10px 50px #F0D2DF;
-  border-radius: 50px;
-  transform: matrix(1, 0, 0, -1, 0, 0);
+  border-radius: 0 50px 50px 0;
   position: relative;
-  transform: skew(5deg, 0deg);
-  left: -82px;
+  transform: skewX(3deg) translateX(-24px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
-.login-page div:nth-child(1) img {
-  position: absolute;
-  top: 243px;
-  left: 145px;
+.singUpRobot img {
+  max-width: 100%;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
+  padding: 0;
 }
-
+.singUpRobot {
+  height: 432px;
+  width: 316px;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  transform: skewX(-3deg);
+}
 .login-page div:nth-child(2) {
-  width: 100%;
-  max-width: 960px;
+  position: relative;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
 }
 
 .login-page div:nth-child(2) img {
@@ -76,29 +95,29 @@ a {
   font-size: 17px;
   line-height: 25px;
   color: #8D869E;
-  margin-top: 42px;
+  margin: 42px 0 62px 0;
 }
 
 .login-page div:nth-child(2) a {
   padding: 0;
   color: #F5781E;
+  font-size: 14px;
 }
 
 .registration-form {
   margin: auto;
-  background-color: #FFFFFF;
   border-radius: 24px;
 }
-.registration-form form {
+.form {
   position: relative;
-  padding: 60px 0;
+  padding: 60px 75px;
   border-radius: 24px;
   max-width: 500px;
   margin: auto;
   z-index: 10;
 }
 
-.registration-form form>a {
+.form>a {
   text-decoration: none;
   display: block;
   text-align: center;
@@ -107,7 +126,7 @@ a {
 .registration-form>div {
   position: relative;
 }
-.registration-form div::before {
+.registration-form>div::before {
   position: absolute;
   z-index: 4;
   top: 0;
@@ -122,7 +141,7 @@ a {
   transform: skewX(3deg);
 }
 
-.registration-form div::after {
+.registration-form>div::after {
   position: absolute;
     z-index: 4;
     top: 0;
@@ -136,7 +155,7 @@ a {
     -webkit-transform: skewX(-3deg);
     transform: skewX(-3deg);
 }
-.registration-form form span {
+.form span {
   position: absolute;
   font-size: 10px;
   color: #10C9BE;
@@ -150,15 +169,16 @@ a {
 
 .registration-form input {
   width: 296px;
-  padding: 16px 0 24px 34px;
+  padding: 20px 0 20px 34px;
   border-radius: 28px;
   border: 1px solid #E8E7EC;
   margin: auto;
   display: block;
   margin-bottom: 20px;
+  font-size: 17px;
 }
 
-.registration-form input[type=password] {
+.registration-form input:nth-child(4) {
   margin-bottom: 6px;
 }
 
@@ -175,6 +195,7 @@ a {
   margin-top: 30px;
   margin-bottom: 0;
   background: linear-gradient(#17ECDF, #0B8E86);
+  font-size: 17px;
 }
 
 @keyframes App-logo-spin {
